# RaspberryPI

AutoFans/: CMakeLists.txt  main.cpp
MathPic/: CMakeLists.txt
MathPic/client/: client.cpp  client.h  data.h  draw.cpp  draw.h  main.cpp
MathPic/server/: main.cpp  server.cpp  server.h
Sensor/BMP058/: CMakeLists.txt  bmp085.cpp  bmp085.h  main.cpp
Sensor/BMP280/: BMP280.cpp  BMP280.h  main.cpp
Sensor/MS5611/: CMakeLists.txt  main.cpp  ms5611.cpp  ms5611.h
V4L/: CMakeLists.txt  camera.cpp  camera.h  decode_jpeg.c  decode_jpeg.h  huffman.h  main.cpp  raw2jpeg.cpp  raw2jpeg.h  save_image.cpp  save_image.h  video.cpp  video.h
